--- a/web/css/style.css
+++ b/web/css/style.css
@@ -34,6 +34,13 @@ body,html{
     align-items: center;
 }
 
+.flexrowcenter{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
 .flexcolumn{
     display: flex;
     flex-direction: column;
@@ -47,6 +54,10 @@ body,html{
 
 .white{
     color: white;
+}
+
+.blue{
+    color: var(--light-blue);
 }
 
 h1{
@@ -185,8 +196,8 @@ input, select {
     height: 50px;
     flex-shrink: 0;
     background: var(--yellow);
-    color: #544F4C;
-    font-family: Raleway;
+    color: var(--pink);
+    font-family: 'Nunito', sans-serif;
     font-size: 18px;
     font-style: normal;
     font-weight: 500;
@@ -243,4 +254,12 @@ select {
 .profile_block{
     padding-top: 60px;
     padding-bottom: 60px;
+}
+
+.statistic{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 50px;
+    margin-top: 50px;
 }
